[package]
name = "bleurgh"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9.2" }
gio = "0.20.4"
glib = "0.20.4"
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1.16"
serde_xml = "0.9.1"
boa_engine = "0.19.1"
serde_json = "1.0.128"
